// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stake page component matches snapshots matches manual staking page 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page sub"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="grid"
                      style="gap: 0;"
                    >
                      <div
                        class="wrapper search"
                      >
                        <input
                          autocomplete="off"
                          class="input"
                          inputmode="search"
                          placeholder="Search for validator..."
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                          data-testid="SearchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </div>
                      <div
                        class="chainfilter__out"
                      >
                        <div
                          class="filter header"
                        >
                          <div
                            class="pills"
                          >
                            <button
                              class="active"
                            >
                              <img
                                alt="Terra"
                                src="https://station-assets.terra.money/img/chains/Terra.svg"
                              />
                              Terra
                            </button>
                            <button>
                              <img
                                alt="Atreides"
                                src="https://station-assets.terra.money/img/chains/Atreides.png"
                              />
                              Atreides
                            </button>
                            <button>
                              <img
                                alt="Corrino"
                                src="https://station-assets.terra.money/img/chains/Corrino.png"
                              />
                              Corrino
                            </button>
                            <button>
                              <img
                                alt="Harkonnen"
                                src="https://station-assets.terra.money/img/chains/Harkonnen.png"
                              />
                              Harkonnen
                            </button>
                            <button>
                              <img
                                alt="Ordos"
                                src="https://station-assets.terra.money/img/chains/Ordos.png"
                              />
                              Ordos
                            </button>
                          </div>
                        </div>
                        <div
                          class="content"
                        />
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake page component matches snapshots matches manual staking page with search 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page sub"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="grid"
                      style="gap: 0;"
                    >
                      <div
                        class="wrapper search"
                      >
                        <input
                          autocomplete="off"
                          class="input"
                          inputmode="search"
                          placeholder="Search for validator..."
                          value="Terran"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                          data-testid="SearchIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </div>
                      <div
                        class="chainfilter__out"
                      >
                        <div
                          class="filter header"
                        >
                          <div
                            class="pills"
                          >
                            <button
                              class="active"
                            >
                              <img
                                alt="Terra"
                                src="https://station-assets.terra.money/img/chains/Terra.svg"
                              />
                              Terra
                            </button>
                            <button>
                              <img
                                alt="Atreides"
                                src="https://station-assets.terra.money/img/chains/Atreides.png"
                              />
                              Atreides
                            </button>
                            <button>
                              <img
                                alt="Corrino"
                                src="https://station-assets.terra.money/img/chains/Corrino.png"
                              />
                              Corrino
                            </button>
                            <button>
                              <img
                                alt="Harkonnen"
                                src="https://station-assets.terra.money/img/chains/Harkonnen.png"
                              />
                              Harkonnen
                            </button>
                            <button>
                              <img
                                alt="Ordos"
                                src="https://station-assets.terra.money/img/chains/Ordos.png"
                              />
                              Ordos
                            </button>
                          </div>
                        </div>
                        <div
                          class="content"
                        />
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake page component matches snapshots matches original component 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="buttonfilter"
                    >
                      <div
                        class="header"
                      />
                      <div
                        class="actions"
                      >
                        <button
                          class="active"
                        >
                          Delegate
                        </button>
                        <button>
                          Undelegate
                        </button>
                      </div>
                      <div
                        class="content"
                      >
                        <article
                          class="card muted default"
                        >
                          <section
                            class="main"
                          >
                            <article
                              class="page small invisible"
                            >
                              <div
                                class="container grid"
                              >
                                <section
                                  class="main"
                                >
                                  <div
                                    class="chainfilter__out"
                                  >
                                    <div
                                      class="filter header"
                                    >
                                      <div
                                        class="pills"
                                      >
                                        <button
                                          class="active"
                                        >
                                          <img
                                            alt="Terra"
                                            src="https://station-assets.terra.money/img/chains/Terra.svg"
                                          />
                                          Terra
                                        </button>
                                        <button>
                                          <img
                                            alt="Atreides"
                                            src="https://station-assets.terra.money/img/chains/Atreides.png"
                                          />
                                          Atreides
                                        </button>
                                        <button>
                                          <img
                                            alt="Corrino"
                                            src="https://station-assets.terra.money/img/chains/Corrino.png"
                                          />
                                          Corrino
                                        </button>
                                        <button>
                                          <img
                                            alt="Harkonnen"
                                            src="https://station-assets.terra.money/img/chains/Harkonnen.png"
                                          />
                                          Harkonnen
                                        </button>
                                        <button>
                                          <img
                                            alt="Ordos"
                                            src="https://station-assets.terra.money/img/chains/Ordos.png"
                                          />
                                          Ordos
                                        </button>
                                      </div>
                                    </div>
                                    <div
                                      class="content"
                                    />
                                  </div>
                                </section>
                              </div>
                            </article>
                          </section>
                        </article>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Stake page component matches snapshots matches undelegate page 1`] = `
<DocumentFragment>
  <article
    class="page"
  >
    <div
      class="container grid"
    >
      <header
        class="header"
      >
        <div
          class="titleWrapper"
        >
          <h1
            class="title"
          >
            Stake
          </h1>
        </div>
        <a
          class="button small primary"
          href="/rewards"
        >
          Withdraw all rewards
        </a>
      </header>
      <section
        class="main"
      >
        <div
          class="col"
          style="flex: 1;"
        >
          <div
            class="tabsContainer"
          >
            <section
              class="tabs page"
            >
              <button
                class="tab active"
                type="button"
              >
                <div
                  class="title"
                >
                  Quick Stake
                </div>
                <span
                  class="inline start"
                  style="gap: 4px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit muted css-1vooibu-MuiSvgIcon-root"
                    data-testid="HelpOutlineOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="tab"
                type="button"
              >
                <div
                  class="title"
                >
                  Manual Stake
                </div>
              </button>
            </section>
            <div
              class="content"
            >
              <article
                class="page"
              >
                <div
                  class="container grid"
                >
                  <section
                    class="main"
                  >
                    <div
                      class="buttonfilter"
                    >
                      <div
                        class="header"
                      />
                      <div
                        class="actions"
                      >
                        <button>
                          Delegate
                        </button>
                        <button
                          class="active"
                        >
                          Undelegate
                        </button>
                      </div>
                      <div
                        class="content"
                      >
                        <article
                          class="card muted default"
                        >
                          <section
                            class="main"
                          >
                            <article
                              class="page small invisible"
                            >
                              <div
                                class="container grid"
                              >
                                <section
                                  class="main"
                                >
                                  <div
                                    class="chainfilter__out"
                                  >
                                    <div
                                      class="filter header"
                                    >
                                      <div
                                        class="pills"
                                      >
                                        <button
                                          class="active"
                                        >
                                          <img
                                            alt="Terra"
                                            src="https://station-assets.terra.money/img/chains/Terra.svg"
                                          />
                                          Terra
                                        </button>
                                        <button>
                                          <img
                                            alt="Atreides"
                                            src="https://station-assets.terra.money/img/chains/Atreides.png"
                                          />
                                          Atreides
                                        </button>
                                        <button>
                                          <img
                                            alt="Corrino"
                                            src="https://station-assets.terra.money/img/chains/Corrino.png"
                                          />
                                          Corrino
                                        </button>
                                        <button>
                                          <img
                                            alt="Harkonnen"
                                            src="https://station-assets.terra.money/img/chains/Harkonnen.png"
                                          />
                                          Harkonnen
                                        </button>
                                        <button>
                                          <img
                                            alt="Ordos"
                                            src="https://station-assets.terra.money/img/chains/Ordos.png"
                                          />
                                          Ordos
                                        </button>
                                      </div>
                                    </div>
                                    <div
                                      class="content"
                                    />
                                  </div>
                                </section>
                              </div>
                            </article>
                          </section>
                        </article>
                      </div>
                    </div>
                  </section>
                </div>
              </article>
            </div>
          </div>
        </div>
      </section>
    </div>
  </article>
</DocumentFragment>
`;
